task_3/2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-school-service
  labels:
    app: devops-school
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30080
  selector:
    app: devops-school
