task_3/2/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: devops-school-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: devops-school.local
      http:
        paths:
          - path: /|/(.+)
            backend:
              serviceName: devops-school-service
              servicePort: 80
